# Autodiff-Codegen

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  autodiff_benchmarks.cc  brdf_cost_function.h  constant_cost_function.h  linear_cost_functions.h  snavely_reprojection_error.h
cmake/: CeresCodeGeneration.cmake  generate_code_for_functor.cc.in
src/: CMakeLists.txt
src/AutodiffCodegen/: codegen_cost_function.h  generate_code_for_functor.h  macros.h
src/AutodiffCodegen/ceres/: autodiff_cost_function.h  cost_function.h  jet.h  rotation.h  sized_cost_function.h  types.h
src/AutodiffCodegen/ceres/internal/: array_selector.h  autodiff.h  fixed_array.h  numeric_diff.h  parameter_dims.h  port.h  variadic_evaluate.h
src/AutodiffCodegen/internal/: code_generator.cc  code_generator.h  cost_function_to_functor.h  eliminate_nops.cc  eliminate_nops.h  expression.cc  expression_graph.cc  expression_ref.cc  expression_ref.h  optimize_expression_graph.cc  optimize_expression_graph.h  types.h
tests/: CMakeLists.txt  autodiff_codegen_test.cc  autodiff_codegen_test.h  code_generator_test.cc  expression_graph_test.cc  expression_ref_test.cc  expression_test.cc  test_utils.cc  test_utils.h
